# GRCPC-Solutions

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: main.cpp.8270F18F352F3354.idx  problem1.cpp.32F2508DA7893697.idx  problems.h.2CE500CB402B6D2F.idx  test.cpp.CC0D047DACEC4530.idx  timer.h.088075936A95DB2A.idx
docs/: notes.md
include/: problems.h  timer.h
samples/: p1-small.txt  p1.txt  p2.txt
src/: main.cpp
src/problem1/: main.cpp  problem1.cpp  problem1_v0.cpp  problem1_v1.cpp  utils.cpp  utils.h
src/problem2/: problem2.cpp
src/problem3/: problem3.cpp
